# RINGKAS

./: .editorconfig  .env.example  .gitignore  AGENTS.md  README.md
services/rag-worker/: .dockerignore  .env.example  Dockerfile  README.md  evaluation_dataset.json  evaluation_sample_responses.json  manual_audit_template.csv  pyproject.toml
services/rag-worker/ringkas_worker/: __init__.py  __main__.py  chunking.py  citations.py  cleaning.py  config.py  dimension.py  evaluation_dataset.py  fusion.py  indexing.py  manual_audit.py  parsers.py  pdfs.py  processor.py  qdrant_setup.py  query_service.py  ragas_harness.py  reindex.py  retrieval.py  retrieval_debug.py  selection.py  sparse_retrieval.py  sufficiency.py  worker.py
services/rag-worker/tests/: test_bps_client.py  test_chunk_schema_integration.py  test_chunking.py  test_chunks_repository.py  test_citations.py  test_citations_integration.py  test_cleaning.py  test_config.py  test_dimension_reindex.py  test_document_schema_integration.py  test_documents_repository.py  test_documents_repository_integration.py  test_embedding_client.py  test_evaluation_dataset.py  test_fusion.py  test_indexing.py  test_job_repository.py  test_job_repository_integration.py  test_logs_repository.py  test_logs_repository_integration.py  test_manual_audit.py  test_parsers.py  test_pdfs.py  test_processor.py  test_qdrant_setup.py  test_query_service.py  test_ragas_harness.py  test_retrieval.py  test_retrieval_debug.py  test_runtime.py  test_selection.py  test_sparse_retrieval.py  test_sufficiency.py  test_terminal_repositories.py  (+2 more)
(+105 files in other folders)
