[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ringkas-rag-worker"
version = "0.1.0"
description = "Internal RINGKAS PostgreSQL job polling worker"
requires-python = ">=3.12"
dependencies = [
  "httpx==0.28.1",
  "langchain-text-splitters==0.3.11",
  "PyMuPDF==1.26.3",
  "psycopg[binary]==3.3.4",
  "pydantic-settings==2.14.2",
  "qdrant-client==1.14.3",
]

[project.optional-dependencies]
test = ["pytest==9.1.1"]

[project.scripts]
ringkas-worker = "ringkas_worker.__main__:main"
ringkas-qdrant-setup = "ringkas_worker.qdrant_setup:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["ringkas_worker*"]
